@@ -9,6 +9,11 @@
     font-size: 17px;
 }
 
+.search-claims {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
 .search-claims-btn {
   background: #296198;
   padding: 6px 9px;
